# Tracer

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  rebuild_all.sh
include/: bvh.h  camera.h  data.h  hello.h  logging.h  material.h  objects.h  random.h  ray.h  render.h  save.h  scene.h  settings.h  utils.h
scripts/: build_and_run.sh  clean.sh  rebuild_all.sh
src/: CMakeLists.txt  bvh.cpp  camera.cpp  hello.cpp  main.cpp  material.cpp  random.cpp  render.cpp  save.cpp  scene.cpp  utils.cpp
test/: CMakeLists.txt  hello_test.cpp  performance_test.cpp  scene_examples_test.cpp  test.h  test_runner.cpp
